--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "private": true,
   "dependencies": {
-    "detect-mobile-browser": "^5.0.0",
     "egg": "^1.9.0",
     "egg-mongoose": "^2.1.1",
     "egg-scripts": "^1.2.0",
@@ -12,9 +11,7 @@
     "lodash": "^4.17.4",
     "mobile-detect": "^1.3.7",
     "moment": "^2.19.0",
-    "mongoose": "^4.11.13",
-    "svg-captcha": "^1.3.11",
-    "uuid": "^3.1.0"
+    "svg-captcha": "^1.3.11"
   },
   "devDependencies": {
     "autod": "^2.9.0",
